[package]
name = "rust_lib_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
dart-sys = "*"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
rpath = true
